--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -20,6 +20,7 @@
     border-bottom: 3px solid transparent;
     width: 90%;
     display: block;
+    transition: all .3s;
 
     &:focus {
       outline: none;
@@ -54,4 +55,30 @@
       transform: translateY(-4rem);
   }
 
+  &__radio-group {
+    width: 49%;
+    display: inline-block;
+  }
+
+  &__radio__label{
+    font-size: $default-font-size;
+    cursor: pointer;
+    position: relative;
+  }
+
+  &__radio-button {
+    height: 3rem;
+    width: 3rem;
+    border: solid 5px $color-primary;
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    top:0;
+
+    &::after{
+
+    }
+
+  }
 }
