--- a/css/style.css
+++ b/css/style.css
@@ -91,32 +91,35 @@ body {
     margin-bottom: 3rem; }
 
 .u-center-text {
-  text-align: center; }
+  text-align: center !important; }
 
 .u-margin-bottom-big {
-  margin-bottom: 8rem; }
+  margin-bottom: 8rem !important; }
 
 .u-margin-bottom-huge {
-  margin-bottom: 10rem; }
+  margin-bottom: 10rem !important; }
 
 .u-margin-top-big {
-  margin-top: 8rem; }
+  margin-top: 8rem !important; }
 
 .u-margin-bottom-medium {
-  margin-bottom: 4rem; }
+  margin-bottom: 4rem !important; }
 
 .u-margin-bottom-small {
-  margin-bottom: 1.5rem; }
+  margin-bottom: 1.5rem !important; }
 
-.btn:link, .btn:visited {
+.btn, .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
-  padding: 1.5rem 4rem;
+  padding: 1rem 4rem;
   display: inline-block;
   border-radius: 10rem;
   transition: all .2s;
-  padding: 2rem 4rem;
-  position: relative; }
+  padding: 1.5rem 2rem;
+  position: relative;
+  font-size: 1.6rem;
+  border: none;
+  cursor: pointer; }
 
 .btn:hover {
   transform: translateY(-0.3rem);
@@ -126,7 +129,8 @@ body {
     transform: scale(1.7);
     opacity: 0; }
 
-.btn:active {
+.btn:active, .btn:focus {
+  outline: none;
   transform: translateY(-0.1rem); }
 
 .btn--white {
@@ -374,12 +378,8 @@ body {
     width: 100%;
     object-fit: cover; }
 
-.form form__group {
-  border: solid 3px red; }
-
 .form__group:not(:last-child) {
-  margin-bottom: 2rem;
-  border: solid 3px red; }
+  margin-bottom: 2rem; }
 
 .form__input {
   font-size: 1.5rem;
