--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,7 @@
 @import "layout/header";
 @import "layout/footer";
 @import "layout/grid";
+@import "layout/_navigation";
 
 @import "pages/home";
 
