--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,6 +9,29 @@
 html {
   //this define like 1rem
   font-size: 62.5%;
+
+  //@include respond-phone{
+  //  font-size: 50%;
+  //}
+
+
+  @include respond(tab-land){
+    font-size: 56.25%;
+  }
+
+  @include respond(tab-port){
+    font-size: 50%;
+  }
+
+  @include respond(phone){
+    font-size: 30%;
+  }
+
+
+  @include respond(big-desktop){
+    font-size: 75%;
+  }
+
 }
 
 body {
