--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,6 +3,10 @@
   padding: 10rem 0;
   font-size: 1.4rem;
 
+  @include respond(tab-port){
+    padding: 8rem 0;
+  }
+
 
   &__logo-box {
     text-align: center;
@@ -12,12 +16,20 @@
   &__logo {
     width: 15rem;
     height: auto;
+    @include respond(tab-port){
+      margin-bottom: 6rem;
+    }
   }
 
   &__navigation {
     border-top: 1px solid $color-grey-dark;
     padding-top: 2rem;
     display: inline-block;
+
+    @include respond(tab-port){
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__list {
@@ -54,5 +66,9 @@
   &__copyright {
     border-top: 1px solid $color-grey-dark;
     padding-top: 2rem;
+    @include respond(tab-port){
+      width: 100%;
+      float: none;
+    }
   }
 }
